apps/hugo-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aj-blogs
  namespace: hugo
spec:
  selector:
    app: aj-blogs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
