apps/hugo-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-site-ingress
  namespace: hugo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ajlabs.duckdns.org
      http:
        paths:
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: aj-blogs
                port:
                  number: 80
